@@ -1,5 +1,8 @@
 2012-12-23  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mkvmerge: new feature: Implemented splitting by frame/field
+	numbers. Implements #771.
+
 	* mmg: bug fix: Fixed consistency checks when appending files and
 	at least one track is disabled.
 
